fix(pagination): overflow

--- a/apps/website/src/view/component/pagination/pagination.module.scss
+++ b/apps/website/src/view/component/pagination/pagination.module.scss
@@ -2,13 +2,13 @@
 
 .pagination {
   display: flex;
-  gap: 16px;
   align-items: center;
 }
 
 .item {
   width: 36px;
   height: 36px;
+  margin: 8px;
   border-radius: 4px;
   background-color: get-css-var(pagination, bg-color);
   color: get-css-var(pagination, color);
